clapi_macros/test_suite/tests/ui/fail/unspecified_fn_arg/unspecified_option.rs
use clapi::macros::*;

#[command]
#[arg(default=1)]
fn app(x: i64){}

fn main(){}