clapi_macros/test_suite/tests/ui/fail/unspecified_fn_arg/unspecified_option.stderr
error: custom attribute panicked
 --> $DIR/unspecified_option.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: first element in `#[arg(...)]` must be a path like: `#[arg(name)]` where `argument` is the name of the function argument
